2008-12-12  smeghead <smeghead@users.sourceforge.jp>

    * トップページのデザインを修正した。
    * wikiの出力でエラーが発生することがあったのを修正した。

2008-12-10  smeghead <smeghead@users.sourceforge.jp>

    * 全体のトップをトップページ、追加するBTSをサブプロジェクトと呼ぶように修正。
    * ホームというリンクのリンク先を変更する機能は存在したが、ホームというリンク名も修正できる機能を追加した
    * トップをプロジェクトと呼ぶことにしたので、トップに名前を付けられるように修正。
      それに伴ない、以前のバージョン(1.2.1-alpha から
      1.2.3-alpha)から移行する場合、下のSQLを、<Starbug1>/db/1.db
      に対して実行する必要がある。
      $ cd <Starbug1>/db/
      $ sqlite3 1.db
      sqlite> create table setting(name text primary key, value text );
      sqlite> insert into setting(name, value) values ('project_name', 'メインプロジェクト');
      sqlite> insert into setting(name, value) values ('home_description', 'ホーム');
      sqlite> insert into setting(name, value) values ('home_url', '');
      sqlite> .quit
      また、2.db 3.db
      など2以降のが存在する場合、それぞれに対して以下のSQLを実行する必要がある。
      $ cd <Starbug1>/db/
      $ sqlite3 2.db
      sqlite> insert into setting(name, value) values ('home_description', 'ホーム');
      sqlite> .quit
    * Seleniumのテストコード修正。
    * トップページのサブプロジェクト一覧のリンクの閉じタグが抜けていたのを追加した。
    * トップページ用のcssファイルを別に追加した。

2008-12-08  smeghead <smeghead@users.sourceforge.jp>

    * トップページのリンクの出力方法でHTMLエンコードが行なわれていなかったのを修正した。
    * 状態別チケット一覧のアンカーリンクの名前をurlエンコードするようにした。
    * チケットリンクの処理で、#が存在するがリンクで無かった場合にゴミが表示されるのを修正した。
    * 状態別チケット一覧のアンカータグをname属性と合わせてid属性も指定するようにした。
      id属性だけを指定した場合、linuxのfirefoxで動作がおかしかったため。
    * リリース準備
    * 統計情報のグラフの表示を調整

2008-12-07  smeghead <smeghead@users.sourceforge.jp>

    * 1.2.3-alphaリリース

2008-12-07  smeghead <smeghead@users.sourceforge.jp>

    * 管理ツールのプロジェクト一覧へのリンクが全体の管理へのリンクになっていた
      ので、全体のトップへのリンクに修正した。
    * rssのリンクをアイコンに変更した。

2008-12-03  smeghead <smeghead@users.sourceforge.jp>

    * プロジェクトの削除機能を追加した。
    * プロジェクト情報の更新ができないバグを修正した。入力チェックの不備があった。
    * プロジェクトの削除について注意書きを追加した。

2008-12-02  smeghead <smeghead@users.sourceforge.jp>

    * チケットリンクのバグを修正した。
    * チケットリンクのテストコードを追加。
    * リリース準備
