@@ -506,7 +506,7 @@ table.item_table textarea {
     list-style: none;
     margin: 0;
     padding: 0;
-    width: 100%;
+    width: 99%;
     border: solid #333 1px;
     margin-bottom: 8px;
 }
