@@ -167,8 +167,16 @@ table tr td {
     color: #ffffff;
     padding-bottom: 0px;
 }
+div.complete_message {
+    border: 1px #228B22 solid;
+    margin: 15px 3px 15px 3px;
+    padding: 5px 5px 5px 20px;
+    background-color: #DDFFDD;
+    width: 80%;
+    -moz-border-radius: 8px;
+}
 #projectmenu {
-    margin: 10px 0px 50px 0px;
+    margin: 10px 0px 30px 0px;
 }
 #projectmenu ul {
     background: #ccc;
@@ -176,7 +184,7 @@ table tr td {
     list-style: none;
     margin: 0;
     padding: 0;
-    width: 100%;
+    width: 98%;
     border: solid #333 1px;
     margin-bottom: 8px;
 }
