@@ -434,9 +434,7 @@ void list_action()
     states_a = db_get_states_has_not_close(db_a, states_a);
     foreach (it, states_a) {
         State* s = it->element;
-        o("\t\t\t<a href=\"#");
-        u(s->name);
-        o("\" title=\"ページ内へのリンク\">");
+        o("\t\t\t<a href=\"#state%d""\" title=\"ページ内へのリンク\">", s->id);
         h(s->name);
         o("</a>&nbsp;\n");
     }
@@ -451,7 +449,7 @@ void list_action()
         result_a = db_get_tickets_by_status(db_a, s->name, result_a);
         list_free(conditions_a);
 
-        o("<a id=\""); u(s->name); o("\" name=\""); u(s->name); o("\"></a>\n");
+        o("<a id=\"state%d\" name=\"state%d\"></a>\n", s->id, s->id);
         o("<div>\n");
         o("<h4 class=\"status\">");h(s->name);o("&nbsp;(%d件)&nbsp;<a href=\"#top\">↑</a></h4>\n", s->count);
         if (result_a->hit_count == LIST_COUNT_PER_LIST_PAGE) {
