@@ -2,6 +2,8 @@
 
     * トップページのデザインを修正した。
     * wikiの出力でエラーが発生することがあったのを修正した。
+    * アンカータグのid name属性に%が含まれないように修正した。
+    * textareaにmaxlength属性が指定されていた部分があったので削除した。
 
 2008-12-10  smeghead <smeghead@users.sourceforge.jp>
 
